# hearts-textual

./: .env.example  .gitignore  Makefile  README.md  client.py  commands.py  data.py  game.py  pyproject.toml  server.py
client/: demo.css  demo.py  hearts.css  hearts.py
hearts-textual/: commands.py  server.py
hearts_textual/: client.py  commands.py  data.py  server.py  tui.css  tui.py
src/: client.py  commands.py  data.py  server.py
tests/: data.py  fixtures.py  game_state.json  test_commands.py  test_commands_bots.py  test_game.py
tui/: app.css  app.py  base_screen.py  game_screen.py  login_screen.py  messages.py  summary_screen.py
