[tool.poetry]
name = "hearts-textual"
version = "0.1.0"
description = ""
authors = ["Draggor"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^10.4"
textual = "^0.7.0"
aioconsole = "^0.5.1"
dataclasses-json = "^0.5.7"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
files = ["hearts_textual", "tests"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "aioconsole.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
