[tool.poetry]
name = "hearts-textual"
version = "0.2.0"
description = ""
authors = ["Draggor"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
textual = {extras = ["dev"], version = "^0.67.1"}
aioconsole = "^0.7.1"
dataclasses-json = "^0.6.7"
python-dotenv = "^1.0.1"
jsondiff = "^2.0.0"
dictdiffer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
black = "^24.4.2"
pytest-mock = "^3.14.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "^3.11"
files = ["hearts_textual", "tests"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "aioconsole.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
mock_use_standalone_module = true
